--- a/public/css/GuestCSS/news_guest.css
+++ b/public/css/GuestCSS/news_guest.css
@@ -1,3 +1,6 @@
+.news-content{
+    height: 400px;
+}
 .news-container {
     width: 100%;
     height: 100%;
@@ -10,7 +13,6 @@
 }
 
 #news-carousel {
-    top: 100px;
     width: 50%;
     height: 80%;
     display: block;
