--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,7 +1,7 @@
 /* #loginDIV .container{
     height: 50%;
 } */
-body {
+#loginDIV {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
