--- a/public/css/login.css
+++ b/public/css/login.css
@@ -13,11 +13,14 @@
 
 .card {
     /* background: linear-gradient(#16FF00, #1A5D1A); */
-    height: 80vh;
+    height: 10%;
     /* height: 0; */
     margin-top: 10%;
     color: black;
     box-shadow: 3px 3px 3px 2px black;
+}
+.card-body{
+    height: 550px;
 }
 .card:hover {
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
