--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,7 +4,7 @@
     bottom: 0;
     height: 50px;
     width: 100%;
-    background-color: #004225; /* Background color for the footer */
+    background-color: #004225;
     padding: 20px;
     color: white;
     text-align: center;
