--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -6,6 +6,6 @@
     width: 100%;
     background-color: #004225;
     padding: 20px;
-    color: white;
+    color: black;
     text-align: center;
 }
