--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,11 +1,11 @@
 .footer {
+    color: #fff; /* Text color for the copyright notice */
     position: fixed;
     left: 0;
     bottom: 0;
-    height: 50px;
     width: 100%;
+    height: 50px;
     background-color: #004225;
     padding: 20px;
-    color: black;
     text-align: center;
 }
