--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,6 +4,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    top: 20px;
     height: 50px;
     background-color: #004225;
     padding: 20px;
