--- a/public/css/GuestCSS/events.css
+++ b/public/css/GuestCSS/events.css
@@ -21,7 +21,7 @@
 }
 /* Slider  */
 .event-container {
-    max-height: 800px;
+    max-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
