--- a/public/css/GuestCSS/guestannouncement.css
+++ b/public/css/GuestCSS/guestannouncement.css
@@ -12,9 +12,10 @@
 }
 .headers_text_title {
     background-color: #004225;
+    text-transform: uppercase;
     color: white;
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .carousel {
