--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,8 +5,8 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-image: url("../images/CNHS_IMAGE/330179308_1517563695439831_5852183554775651906_n.jpg");
-    background-repeat: no-repeat;
+    /* background-image: url("../images/CNHS_IMAGE/330179308_1517563695439831_5852183554775651906_n.jpg"); */
+    /* background-repeat: no-repeat; */
     height: 100vh;
     background-size: cover;
 }
@@ -16,6 +16,7 @@
     height: 10%;
     /* height: 0; */
     margin-top: 10%;
+    background-color: green;
     color: black;
     box-shadow: 3px 3px 3px 2px black;
 }
