--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,8 +7,8 @@
     font-family: sans-serif;
     /* background-image: url("../images/CNHS_IMAGE/330179308_1517563695439831_5852183554775651906_n.jpg"); */
     /* background-repeat: no-repeat; */
-    height: 100vh;
-    background-size: cover;
+    /* height: 100vh;
+    background-size: cover; */
 }
 
 .card {
